# clickup-billing-report

./: .gitignore  .sops.yaml  Dockerfile  Jenkinsfile  README.md  app.py  client.py  demo_bot.py  disable_logging.py  gunicorn_conf.py  pyproject.toml  report.py  requirements.txt  timetracking_report.py  toggl_sync.py
.helm/: Chart.yaml  values.yaml
.helm/beta/: secrets.yaml  values.yaml
.helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
templates/: billable_report.html  demo_report.html  header.html  index.html  reports_list.html  time_tracking.html  time_tracking_report.html  toggl_sync.html  toggl_sync_errors.html  toggl_sync_results.html
