[tool.poetry]
name = "clickup-report"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "clickup_report"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.0.0"
pandas = "^2.1.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
